assets/less/widget.less
/* ... */
//
// Table Grid
//

// added this style to fix performane bar styling issue in the header column of list of student grid
.ui-jqgrid .ui-jqgrid-htable th div {
  overflow: visible;
}

#gbox_gridTable { overflow: hidden; margin-bottom: 40px;}
table { border-collapse: separate; }
table td {
  .progress {
    margin-bottom: 0;
  }

  // Sticky Comparison related
  .paddingBottom9 {
    padding-bottom: 9px;
    margin-bottom: 0px;
  }

  .marginRight10 {
    margin-right: 10px;
  }

  .verticalAlignMiddle{
    vertical-align: middle;
  }

  .stickyCompareLabel {
    display: inline-block;
    margin-left: 5px;
    font-size: 11px;
    color: @color-B1;
  }

  .stickyCompareLabelChecked {
    display: inline-block;
    margin-left: 5px;
    font-size: 11px;
    color: @color-A2;
    cursor: pointer;
    &:hover { text-decoration: underline;}
  }

  .stickyRemoveLabel {
    font-size: 11px;
    color: @color-B1;
    display: inline-block;
    margin-left: 3px;
    vertical-align: middle;
    cursor: pointer;
  }
  .removeIcon {
    background-image: url("../images/remove_button.png");
    background-repeat: no-repeat;
    width: 12px;
    height: 12px;
    cursor: pointer;
    display: inline-block;
  }
  .stickySection{
    display: block;
  }
}
.ui-widget { font-family: arial; }
.ui-jqgrid tr.jqgrow td.bold { font-weight: bold; }

.ui-ellipsis {
  text-overflow: ellipsis;
  white-space: nowrap !important;
}

.ui-widget-content {
  color: @color-B2;

  a {
    color : @color-A2; text-decoration: none;

    &:hover {
      color: @color-A3;
      text-decoration: underline;
    }

    &.disabled {
      color: @color-B1;

      &:hover {
        text-decoration: none;
      }
    }
  }

}

.ui-jqgrid .ui-jqgrid-view {
  font-size: 12px;
}

.ui-th-column, .ui-jqgrid .ui-jqgrid-htable th.ui-th-column {
  color: @color-B2;
  font-weight: normal;
}
.ui-jqgrid .ui-jqgrid-htable th div {
  text-align: center;
}

// DE76: hide horizontal bar when vertical bar shows up
.ui-jqgrid .ui-jqgrid-bdiv {
  //overflow-x: hidden;

  thead { display: none; }
}
th.ui-th-column div {
  height: auto !important;
  padding: 4px 5px;
  text-align: left;
  white-space: normal !important;
}

.ui-jqgrid tr.jqgrow td {
  padding: 4px 5px;
  white-space: normal;
}

.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default {
  background: @color-B6;
  border: solid 1px @color-B7;
  color: #333;
}

.Math, .Math_ELA {
  #jqgh_gridTable_student_full_name {
    padding-top: 15px;
    padding-bottom: 15px;
  }
}

.ELA #jqgh_gridTable_student_full_name {
  padding-top: 6px;
  padding-bottom: 6px;
}


.ui-state-default .ui-th-column-header {
  text-align: left;
  padding-left: 10px !important;
}

.ui-widget-content { border: none; border-top: solid 1px @color-B7; }
.ui-corner-all, .ui-corner-bottom, .ui-corner-left, .ui-corner-bl { border-bottom-left-radius: 0; }

.ui-corner-all, .ui-corner-top, .ui-corner-left, .ui-corner-tl { border-top-left-radius: 0 }

.ui-jqgrid tr.ui-row-ltr td{ border-right: solid 1px @color-B5; }

.ui-jqgrid tr.jqgrow td { border-bottom: solid 1px @color-B7; }

.ui-jqgrid .ui-jqgrid-htable .jqg-second-row-header th {  background: @color-B5; color: @color-B1; font-size: 16px; }

tr.ui-state-hover, tr.ui-widget-content .ui-state-hover, tr.ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus {
  background: @color-B6 !important; color: @color-B2;
}

.ui-jqgrid-sdiv {
  .box-shadow(0 1px 4px, 25%);
  z-index: 100;
  background: @color-B6;

  .ui-widget-content {
    background: @color-B8 !important;
  }
}

.ui-jqgrid tr.footrow td {
  border-top: none;
  border-right: solid 1px @color-B7;
  border-bottom: solid 1px @color-B7;
}

.ui-jqgrid tr.jqgrow td:last-child, .ui-jqgrid .ui-jqgrid-htable th:last-child, .ui-jqgrid tr.footrow td:last-child { border-right: solid 1px transparent; }

.marginLeft20 {

  margin-left: 20px;

  .summaryTitle {
    white-space: normal !important;
    color: @color-B1 !important;
  }

  .summarySubtitle {
    color: @color-B2;
    font-size: 11px;
  }
}
/* ... */

